--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top" style="margin:10px;"><i class="agt-nav">Ayesha Miss's - A.G.T</i></a>
+            <a class="navbar-brand page-scroll" href="#page-top" style="margin:10px;"><i class="agt-nav" style="font-family:cursive;">Ayesha Miss's - A.G.T</i></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
