--- a/css/newagt.css
+++ b/css/newagt.css
@@ -14,12 +14,14 @@
 .agt-nav {
     font-size: 1.4em;
     padding-top: 5px;
+    text-transform: none;
     
 }
 
 @media only screen and (max-width:992px){
     .agt-nav {
-        font-size: 1.0em;
+        font-size: 0.6em;
+        text-transform: none;
     }
 }
 
