--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>The Favorite Choice of most Students!</h1>
+            <h2>The Favorite Choice of most Students!</h2>
+          
+            <h1>A. G. Tutorials</h1>
             <hr>
             <p>AGT is a framework which helps you enjoy the learning process and makes study more effective!
                  Just fill the form below and start going, on the ladders to success!</p>
