--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h2>The Favorite Choice of most Students!</h2>
+            <h2>The Favourite Choice of most Students!</h2>
           
             <h1>A. G. Tutorials</h1>
             <hr>
