--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,23 +18,48 @@
                     <a class="page-scroll" href="#about" style="font-size:1.3em;">About</a>
                 </li>
                 <li class="listing">
-                    <a class="page-scroll" href="#services" style="font-size:1.3em;">Services</a>
+                        <a class="page-scroll" href="#services" style="font-size:1.3em;">Services</a>
                 </li>
                 <!-- <li>
                     <a class="page-scroll" href="#portfolio" style="font-size:1.3em;">Portfolio</a>
                 </li> -->
-                <li class="dropdown ">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="font-size:1.3em;margin-left: 5px;margin-right: 5px;">Portfolio
-                    <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">Our Courses</a></li>
-                      <li><a href="#">Admissions</a></li>
-                      <li><a href="#">Results</a></li>
-                    </ul>
+                <li class="listing">
+                        <a class="page-scroll" href="#contact" style="font-size:1.3em;">Contact</a>
                 </li>
                 <li class="listing">
-                    <a class="page-scroll" href="#contact" style="font-size:1.3em;">Contact</a>
+                    <div class="dropdown pull-left" style="display:inline-block;font-size:1.4em;margin-top: 10px;margin: 5px;">
+                        <button class="btn btn-basic dropdown-toggle" type="button" data-toggle="dropdown" data-hover="dropdown" style="font-size:0.9em;">
+                         Portfolio <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdownhover-bottom">
+                          <li><a href="#">Admissions</a></li>
+                          <li><a href="#">Something else</a></li>
+                          <li><a href="#">Results</a></li>
+                          <li class="dropdown">
+                            <!-- <a href="#" aria-expanded="false">Our Courses<span class="caret"></span></a> -->
+                            <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">
+                                    Our Courses <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu dropdownhover-right">
+                                <li class="dropdown">
+                                    <a href="#">Upto Class 10th</a>
+                                    <!-- <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown" style="font-size:0.9em;">
+                                            Upto Class 10th<span class="caret"></span>
+                                    </button> -->
+                                    <!-- <ul class="dropdown-menu dropdownhover-right">
+                                        <li><h6 class="dropdown-header">Medium</h6></li>
+                                        <li><a href="#">Urdu</a></li>
+                                        <li><a href="#">English</a></li>
+                                    </ul> -->
+                                </li>
+                                <li><a href="#">Class 11th & 12th</a></li>
+                            </ul>
+                          </li>
+                          
+                        </ul>
+                    </div>
                 </li>
+    
             </ul>
         </div>
         <!-- /.navbar-collapse -->
