--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,3 +11,8 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/creative.js"></script>
+
+<!--Dropdown effects of Bootstrap-->
+<script src="js/bootstrap-dropdownhover.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-hover-dropdown/2.2.1/bootstrap-hover-dropdown.js" integrity="sha256-4+SBtUYlnQf4Cyjyn0FaTLepasmxYhKcG8MbEcrb7Ts=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-hover-dropdown/2.2.1/bootstrap-hover-dropdown.min.js" integrity="sha256-oZUp5ULh9oikWgL4PJ/ceUdVHxFP0v2F1wQBC7iLuOQ=" crossorigin="anonymous"></script>
