--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -31,7 +31,7 @@
 -->
 
 
-<section id="contact">
+<section id="contact" style="padding-top:70px; padding-bottom:70px;">
 	<div class="cnt_us">
 		<p>Contact Us.</p>
 	</div>
@@ -40,7 +40,7 @@
             <div class="col-lg-6">
                 <form>
                 	<div class="control-group form-group">
-                		<input type="text"  name="name" placeholder="Name"  required >
+                		<input type="text"  name="name" placeholder="Name" required>
                 	</div>
                 	<div class="control-group form-group">
                 		<input type="email"  name="email" placeholder="Email" required="">
@@ -59,35 +59,40 @@
             </div>
         <div class=" address col-lg-6">
         	    <div class="">
-        			<h1>AGT</h1>
+        			<h1>A. G. Tutorials</h1>
         			<p>AGT is a framework which helps you enjoy the learning process and makes study more effective! Just fill the form below and start going, on the ladders to success!</p>
         		</div>
         	<div >
         		<div>
         			<i class="fa fa-map-marker" style="width:30px"></i>
-        			Abc,India
+        			Mumbra, Dist.Thane, India.
         		</div>
         		<div>
         			<i class="fa fa-phone" style="width:30px"></i>
-        			Phone: +91 1234567890
+        			Phone: +91 7666788347 / 8433564479
         		</div>
         		<div>
         			<i class="fa fa-envelope" style="width:30px"> </i>
-        			Email: abc@gmail.com
+        			Email: tubeagt@gmail.com
         		</div>
         	
         	<div class="icon">
             <a href="https://twitter.com/{{ site.twitter_username }}">
-                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".5s"></i>
+                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".4s"></i>
                 
             </a>
             <a href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay="1.0s"></i>
+            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".8s"></i>
                 
             </a>
-            <a href="https://github.com/{{ site.github_username }}">
-            <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay="1.5s"></i>
+            <a href="https://facebook.com/">
+            <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay="1.2s"></i>
             </a>
+
+        </a>
+        <a href="https://instagram.com/">
+        <i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay="1.6s"></i>
+        </a>
            
 
         </div>
