--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -61,7 +61,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/about/card.jpg" style="height: 100%;" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -69,7 +69,7 @@
                                 <h4 class="subheading"><u> Phase Two Expansion</u></h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">We are planning for the phase two expansion , in which the projects from all over the nation will be  taken and they will given a membership for a year along with some special benefits!</p>
+                                <p class="text-muted">We are planning for the phase two expansion , after the marriage of our beloved Ayesha Miss, SO KINDLY JOIN AT THE MARRIAGE OF AYESHA MISS ON 27TH DEC, "ALL ARE INVITED" , THANKYOU!</p>
                             </div>
                         </div>
                     </li>
