--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -65,7 +65,7 @@
         	<div >
         		<div>
         			<i class="fa fa-map-marker" style="width:30px"></i>
-        			Mumbra, Dist.Thane, India.
+        			302,Sagar Palace,Kadar Palace,Kaunsa,Mumbra, Dist.Thane, India.
         		</div>
         		<div>
         			<i class="fa fa-phone" style="width:30px"></i>
